infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "chat-clsip-srv"
spec:
  tls:
    - hosts:
        - www.recardo.store
      secretName: recardo-store-tls
  rules:
    - host: www.recardo.store
      http:
        paths:
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clsip-srv
                port:
                  number: 3000
          - path: /api/v6/admin/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clsip-srv
                port:
                  number: 3000
          - path: /api/v2/employer/?(.*)
            pathType: Prefix
            backend:
              service:
                name: employer-clsip-srv
                port:
                  number: 3001
          - path: /api/v3/job/?(.*)
            pathType: Prefix
            backend:
              service:
                name: job-clsip-srv
                port:
                  number: 3002  
          - path: /api/v4/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-clsip-srv
                port:
                  number: 3003
          - path: /api/v5/chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-clsip-srv
                port:
                  number: 3004
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-clsip-srv
                port:
                  number: 3004  
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.recardo.store'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: websocket
      port: 3004
      protocol: TCP
      targetPort: websocket  
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
